database/force-app/default/objects/History__c/History__c.object-meta.xml
<CustomObject>
    <label>History</label>
    <nameField>
        <label>History Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>