database/force-app/default/objects/History__c/fields/Activity_Response__c.field-meta.xml
<CustomField>
    <fullName>Activity_Response__c</fullName>
    <label>Activity Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>