database/force-app/default/objects/History__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>get</fullName>
            </value>
            <value>
                <fullName>create</fullName>
            </value>
            <value>
                <fullName>update</fullName>
            </value>
            <value>
                <fullName>delete</fullName>
            </value>
            <value>
                <fullName>login</fullName>
            </value>
            <value>
                <fullName>background_check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>