database/force-app/default/objects/History__c/fields/Schema__c.field-meta.xml
<CustomField>
    <fullName>Schema__c</fullName>
    <label>Schema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Auth</fullName>
            </value>
            <value>
                <fullName>VolunteerHours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>