database/force-app/default/objects/History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>Volunteer__c</referenceTo>
    <relationshipLabel>User (History)</relationshipLabel>
    <relationshipName>HistoryUser</relationshipName>
    <type>Lookup</type>
</CustomField>